# tarab_ai

./: .gitignore  environment.yml  pyproject.toml
